feat: adding a new field for image upload path.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ##rsa keys
 chave.publica = classpath:public_key.pem
 chave.privada = classpath:private_key.pem
+
+#file settings
+upload.imagem=ecommerce/src/main/resources/static/images
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
